# particles

./: .gitignore  CMakeLists.txt  todo.txt
include/: entity.h  physics.h  rect.h  test.h  window.h
src/: entity.cpp  main.cpp  physics.cpp  rect.cpp  window.cpp
